--- a/gitops/dapr/application.yaml
+++ b/gitops/dapr/application.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     chart: dapr
     repoURL: https://dapr.github.io/helm-charts/
-    targetRevision: 1.15.3  # Latest version as of knowledge cutoff
+    targetRevision: 1.15.3
     helm:
       releaseName: dapr
       values: |
@@ -28,3 +28,10 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+  # Add the ignoreDifferences section here
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jsonPointers:
+        - /spec/conversion/webhook/clientConfig/service/namespace
+        - /spec/conversion/webhook/clientConfig/caBundle
