--- a/gitops/dapr/application.yaml
+++ b/gitops/dapr/application.yaml
@@ -32,6 +32,7 @@ spec:
   ignoreDifferences:
     - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
+      name: subscriptions.dapr.io
       jsonPointers:
         - /spec/conversion/webhook/clientConfig/service/namespace
         - /spec/conversion/webhook/clientConfig/caBundle
