--- a/gitops/pubsub-components/application.yaml
+++ b/gitops/pubsub-components/application.yaml
@@ -18,7 +18,7 @@ spec:
     namespace: pubsub-demo
   syncPolicy:
     automated:
-      prune: true
+      prune: false
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
