--- a/gitops/redis/application.yaml
+++ b/gitops/redis/application.yaml
@@ -30,7 +30,7 @@ spec:
     namespace: redis
   syncPolicy:
     automated:
-      prune: true
+      prune: false
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
