--- a/gitops/dapr-components/application.yaml
+++ b/gitops/dapr-components/application.yaml
@@ -7,15 +7,15 @@ spec:
   project: default
   source:
     repoURL: https://github.com/rochabr/dapr-argocd.git
-    path: gitops/pubsub-components
+    path: gitops/dapr-components
     targetRevision: main
     directory:
       recurse: true
       exclude: '*.yaml'
-      include: 'redis-pubsub.yaml'
+      include: 'redis.yaml'
   destination:
     server: https://kubernetes.default.svc
-    namespace: pubsub-demo
+    namespace: argocd-demo
   syncPolicy:
     automated:
       prune: false
