--- a/gitops/dapr-components/redis.yaml
+++ b/gitops/dapr-components/redis.yaml
@@ -1,10 +1,10 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: pubsub
-  namespace: pubsub-demo
+  name: statestore
+  namespace: argocd-demo
 spec:
-  type: pubsub.redis
+  type: state.redis
   version: v1
   metadata:
   - name: redisHost
@@ -13,6 +13,3 @@ spec:
     value: ""
   - name: enableTLS
     value: "false"
-  scopes:
-  - publisher
-  - subscriber
