--- a/app/kubernetes/node.yaml
+++ b/app/kubernetes/node.yaml
@@ -2,6 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: nodeapp
+  namespace: argocd-demo
   labels:
     app: node
 spec:
@@ -18,6 +19,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nodeapp
+  namespace: argocd-demo
   labels:
     app: node
 spec:
