--- a/gitops/conductor/application.yaml
+++ b/gitops/conductor/application.yaml
@@ -20,7 +20,7 @@ spec:
     namespace: dapr-system
   syncPolicy:
     automated:
-      prune: true
+      prune: false
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
