--- a/gitops/conductor/application.yaml
+++ b/gitops/conductor/application.yaml
@@ -12,7 +12,7 @@ spec:
     repoURL: oci://public.ecr.aws/diagrid/conductor-charts
     targetRevision: 0.333.0
     helm:
-      releaseName: agent
+      releaseName: argocd-cluster
       valueFiles:
         - values.yaml
   destination:
