--- a/gitops/conductor/application.yaml
+++ b/gitops/conductor/application.yaml
@@ -7,9 +7,10 @@ spec:
   project: default
   source:
     chart: agent
-    repoURL: public.ecr.aws/diagrid-dev/conductor-charts
-    targetRevision: 0.365.0
+    repoURL: public.ecr.aws/diagrid/conductor-charts
+    targetRevision: 0.366.0
     helm:
+      releaseName: conductor-agent
       valueFiles:
         - values.yaml
   destination:
@@ -18,7 +19,6 @@ spec:
   syncPolicy:
     automated:
       prune: false
-      selfHeal: true
     syncOptions:
       - CreateNamespace=true
   ignoreDifferences:
